# libtropic-util

./: ._CHANGELOG.md  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RPI_TUTORIAL.md
docs/: Linux_SPI.md  TS1302_devkit.md
src/: macandd.c  macandd.h  main.c
test/: ._run_tests_usb.sh  README.md  run_tests.sh  run_tests_hw_spi.sh  run_tests_usb.sh  verify_signature.py
test/HW_SPI/: run_tests_hw_spi.sh
test/USB_devkit/: run_tests_usb.sh  run_tests_usb_macandd.sh  run_tests_usb_rmem.sh
